2011-02-06  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable_list.h: Add usbjtagrs232.
  * src/tap/cable/generic_usbconn_list.h: Add usbjtagrs232.
  * src/tap/cable/ft2232.c: Add usbjtagrs232 support by Orasanu Lucian.

  * doc/UrJTAG.txt: Note by Bogdan Petrisor for pkg-config requirement.

2010-12-19  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx45/STEPPINGS: Add stepping 2 from Sébastien Bourdeauducq.

2010-11-28  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/ejtag.c (ejtag_bus_init): Punt unused EJALL register lookup.
    Make sure EJADDRESS and EJDATA registers exist before we use them.

2010-11-19  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (LT_INIT): Fix typo in fallback macro.

  * src/bus/blackfin.c, src/bus/blackfin.h: New unified Blackfin bus core.
  * src/bus/bf518f_ezbrd.c, src/bus/bf533_stamp.c, src/bus/bf537_stamp.c,
    src/bus/bf548_ezkit.c, src/bus/bf561_ezkit.c: Convert to unified
    Blackfin bus core.
  * configure.ac, src/bus/buses_list.h, src/bus/Makefile.am: Drop board
    specific bus options and have just one "blackfin" bus option since
    all the buses on top of it are small shims now.
  * data/analog/bf518/bf518, data/analog/bf548/bf548: Rename a few bus
    signals to use the same style as all other buses.

  * configure.ac (HAVE_LIBUSB1): Only define when we detect libusb-1.0.pc.

2010-10-26  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable_list.h, src/tap/cable/generic_usbconn_list.h,
    src/tap/cable/ft2232.c: Add support for the Milkymist FTDI USB cable by
    Michael Walle.

2010-10-19  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable.c, src/tap/detect.c, src/tap/cable/ft2232.c,
    src/tap/cable/generic.c, src/tap/cable/jim.c, src/tap/cable/usbblaster.c,
    src/tap/usbconn/libftd2xx.c: Drop useless params cast and useless
    parenthesis around addresses.

2010-10-09  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Check for pread availability and disable gpio cable driver