@@ -63,6 +63,7 @@ typedef enum URJ_CABLE_PARAM_KEY
     URJ_CABLE_PARAM_KEY_TDO,            /* lu           gpio used as TDO */
     URJ_CABLE_PARAM_KEY_TMS,            /* lu           gpio used as TMS */
     URJ_CABLE_PARAM_KEY_TCK,            /* lu           gpio used as TCK */
+    URJ_CABLE_PARAM_KEY_INTERFACE,      /* lu           ftdi */
 }
 urj_cable_param_key_t;
 
